# logisds

./: README.md  pyproject.toml
.github/workflows/: CI.yml
data/: data.csv  inference.csv  inference_halfhour.csv  model.data-00000-of-00001  model.index
jupyter/: Inference.html  Inference.ipynb  model.ipynb  preview.html  preview.ipynb  train.html  train.ipynb
logisds/: data.py  inference.py  model.py  train.py  utils.py
tests/: test_data.py  test_logisds.py  test_model.py
