[tool.poetry]
name = "logisds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3"
#numpy = "^1.21.1"
tensorflow = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.2"
matplotlib = "*"
pydot = "*" # graphviz is needed for system
scipy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
